# music-theory-calculator

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  GEMINI.md  LICENSE  Makefile  README.md
.github/workflows/: ci.yml  deploy.yml  release.yml
apps/android/: gradle.properties  settings.gradle.kts
apps/android/app/: build.gradle.kts  proguard-rules.pro
apps/android/app/src/androidTest/java/net/rovisoft/tonicmusic/: ExampleInstrumentedTest.kt
apps/android/app/src/main/java/net/rovisoft/tonicmusic/: MainActivity.kt  tonic_music_ffi.kt
apps/android/app/src/main/java/net/rovisoft/tonicmusic/ui/theme/: Color.kt  Theme.kt  Type.kt
apps/android/app/src/main/res/drawable/: ic_launcher_foreground_round_wrapper.xml  ic_launcher_round_data.xml  ic_splash_foreground_wrapper.xml
apps/android/app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml  ic_splash.xml
apps/android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
apps/android/app/src/test/java/net/rovisoft/tonicmusic/: ExampleUnitTest.kt
apps/android/gradle/: libs.versions.toml
apps/android/gradle/wrapper/: gradle-wrapper.properties
assets/: logo.xcf  logo_circle.xcf
crates/tonic-music-cli/: Cargo.toml
crates/tonic-music-cli/src/: cli.rs  main.rs  parser.rs
crates/tonic-music-core/: Cargo.toml
crates/tonic-music-core/src/: lib.rs  parser.rs
crates/tonic-music-ffi/: Cargo.toml
crates/tonic-music-ffi/src/: lib.rs
crates/tonic-music-wasm/: Cargo.toml  index.html
crates/tonic-music-wasm/src/: lib.rs
docs/: MOBILE_INTEGRATION.md
scripts/: generate_bindings.sh
src/tonic-music/: .gitignore  Cargo.toml
src/tonic-music/src/: cli.rs  lib.rs  main.rs  parser.rs
