[package]
name = "tonic-music-cli"
version = "2.1.3"
edition = "2024"
description = "CLI for tonic-music music theory calculator"
license = "AGPL-3.0"

[dependencies]
tonic-music-core = { path = "../tonic-music-core" }
clap = { version = "4.5.53", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
