[package]
name = "tonic-music-ffi"
version = "3.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
name = "tonic_music_ffi"

[dependencies]
thiserror = "2.0.17"
tonic-music-core = { path = "../tonic-music-core" }
uniffi = { version = "0.30.0", features = ["cli"] }

[build-dependencies]
uniffi = { version = "0.30.0", features = ["build"] }
