[package]
name = "tonic-music-wasm"
version = "2.1.0"
edition = "2024"
description = "WebAssembly bindings for tonic-music"
license = "AGPL-3.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
tonic-music-core = { path = "../tonic-music-core" }
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6" # Para convertir structs a JS Objects fácilmente
clap = { version = "4.5", features = ["derive"] }
