[package]
name = "tonic-music-wasm"
version = "3.0.0"
edition = "2024"
description = "WebAssembly bindings for tonic-music"
license = "AGPL-3.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
tonic-music-core = { path = "../tonic-music-core" }
wasm-bindgen = "0.2.105"
serde-wasm-bindgen = "0.6.5"
clap = { version = "4.5.53", features = ["derive"] }
